force-app/main/default/objects/Meeting__c/fields/Right_Contact__c.field-meta.xml
<CustomField>
    <fullName>Right_Contact__c</fullName>
    <description>MIS-6753</description>
    <label>Right Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Champion</fullName>
            </value>
            <value>
                <fullName>Potential Decision Maker</fullName>
            </value>
            <value>
                <fullName>Potential End-User</fullName>
            </value>
            <value>
                <fullName>Not The Right Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>