force-app/main/default/objects/Meeting__c/fields/Router_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Router_Name_CP__c</fullName>
    <label>Router Name CP</label>
    <type>TextArea</type>
</CustomField>