force-app/main/default/objects/Meeting__c/fields/SDR_Name__c.field-meta.xml
<CustomField>
    <fullName>SDR_Name__c</fullName>
    <formula>IF (IsBlank (Account__c) || IsBlank (Account__r.SDR_Name__c),null, 

IF (IsBlank (Account__r.SDR_Name__r.FirstName),&quot;&quot;,Account__r.SDR_Name__r.FirstName&amp;&quot; &quot;) 
&amp;Account__r.SDR_Name__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Name</label>
    <type>Text</type>
</CustomField>