force-app/main/default/objects/Meeting__c/fields/Secondary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Solution__c</fullName>
    <label>Secondary Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Unable to identify</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
                <isActive>false</isActive>
                <label>Advisory Services</label>
            </value>
            <value>
                <fullName>Data feeds</fullName>
                <isActive>false</isActive>
                <label>Data feeds</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>