force-app/main/default/objects/Meeting__c/fields/Selected_Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Opp_Type__c</fullName>
    <description>MIS-8454 - Used for passing selected type from Meeting Completed flow to Meeting trigger flow</description>
    <label>Selected Opp Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>