force-app/main/default/objects/Meeting__c/fields/Shopper_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Shopper_Intelligence__c</fullName>
    <description>MIS-8039  Cross solution&apos;s product tracking - Meetings</description>
    <label>Shopper Intelligence</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cross_solution_s_product_tracking</valueSetName>
    </valueSet>
</CustomField>