force-app/main/default/objects/Meeting__c/fields/SimilarWeb_Rank__c.field-meta.xml
<CustomField>
    <fullName>SimilarWeb_Rank__c</fullName>
    <formula>Account__r.Category_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SimilarWeb Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>