force-app/main/default/objects/Meeting__c/fields/Specific_features_of_importance__c.field-meta.xml
<CustomField>
    <fullName>Specific_features_of_importance__c</fullName>
    <label>Specific features of importance</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>