force-app/main/default/objects/Meeting__c/fields/Specific_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Specific_Use_Cases__c</fullName>
    <label>What is the customer&apos;s use case(s)?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Acquisition: Marketing mix optimization</fullName>
                <label>MI: Marketing mix optimization</label>
            </value>
            <value>
                <fullName>User Acquisition: Affiliates</fullName>
                <label>MI: Affiliates Marketing</label>
            </value>
            <value>
                <fullName>User Acquisition: Organic (SEO, Content)</fullName>
                <label>MI: Organic (SEO, Content)</label>
            </value>
            <value>
                <fullName>User Acquisition: Paid (PPC, Display)</fullName>
                <label>MI: Paid Marketing (PPC, Display)</label>
            </value>
            <value>
                <fullName>User Acquisition: Other (Brand, PR, Social Listening)</fullName>
                <label>MI: Other (Brand, PR, Social Listening)</label>
            </value>
            <value>
                <fullName>Path to Purchase: Product demand (what to sell)</fullName>
                <label>PI: Product demand (what to sell)</label>
            </value>
            <value>
                <fullName>Path to Purchase: Product distribution (where to sell)</fullName>
                <label>PI: Product distribution (where to sell)</label>
            </value>
            <value>
                <fullName>Path to Purchase: Optimize conversion</fullName>
                <label>PI: Optimize conversion</label>
            </value>
            <value>
                <fullName>Market &amp; Consumer Research: Understand market share, market sizing &amp; trend analysis</fullName>
                <label>AI: Understand market share &amp; trend analysis</label>
            </value>
            <value>
                <fullName>Market &amp; Consumer Research: Understand audience</fullName>
                <label>AI: Understand audiences</label>
            </value>
            <value>
                <fullName>Sales: Lead enrichment</fullName>
                <label>SI: Lead enrichment</label>
            </value>
            <value>
                <fullName>Sales: Sales intelligence (find, qualify, close, retain, monitor customers or compaines)</fullName>
                <label>SI: Sales intelligence (find, qualify, close, retain, monitor customers or compaines)</label>
            </value>
            <value>
                <fullName>Investors: Source investment opportunities</fullName>
                <label>II: Source investment opportunities</label>
            </value>
            <value>
                <fullName>Investors: Diligence, M&amp;A and investment research</fullName>
                <label>II: Diligence, M&amp;A and investment research</label>
            </value>
            <value>
                <fullName>Investors: Public market investors</fullName>
                <label>II: Public market investors</label>
            </value>
            <value>
                <fullName>Other: Data integration</fullName>
                <label>OO: Data integration</label>
            </value>
            <value>
                <fullName>Other: Other</fullName>
                <label>OO: Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>