force-app/main/default/objects/Meeting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>In MIR, SDR and Sales Meetings - use the &quot;Complete Meeting&quot; Button at the top of the page</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Rescheduling</fullName>
            </value>
            <value>
                <fullName>Scheduling in Progress</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>