force-app/main/default/objects/Meeting__c/fields/Status_Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Status_Completed_Timestamp__c</fullName>
    <description>MIS-3458
Tracks when status was changed to Completed</description>
    <label>Status Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>