force-app/main/default/objects/Meeting__c/fields/Stock_Intel_Industry__c.field-meta.xml
<CustomField>
    <fullName>Stock_Intel_Industry__c</fullName>
    <description>MIS-655 Investors Meeting Section</description>
    <label>Stock Intel Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stock_Intel_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Automarket</fullName>
            </value>
            <value>
                <fullName>Online Autoparts</fullName>
            </value>
            <value>
                <fullName>Online Autos</fullName>
            </value>
            <value>
                <fullName>Alcohol &amp; Tobacco</fullName>
            </value>
            <value>
                <fullName>Grocery &amp; Grocery Delivery</fullName>
            </value>
            <value>
                <fullName>Drug &amp; Pharmacy</fullName>
            </value>
            <value>
                <fullName>Household Products</fullName>
            </value>
            <value>
                <fullName>Meal Kits</fullName>
            </value>
            <value>
                <fullName>Commercial Banks</fullName>
            </value>
            <value>
                <fullName>Consumer &amp; P2P Loans</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>SMB Lending</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Retail Brokerages</fullName>
            </value>
            <value>
                <fullName>State Unemployment</fullName>
            </value>
            <value>
                <fullName>Online Telemedicine</fullName>
            </value>
            <value>
                <fullName>Healthcare Providers</fullName>
            </value>
            <value>
                <fullName>Audio Streaming</fullName>
            </value>
            <value>
                <fullName>Freelancing Platforms</fullName>
            </value>
            <value>
                <fullName>Ride Sharing</fullName>
            </value>
            <value>
                <fullName>Website Builders</fullName>
            </value>
            <value>
                <fullName>E-commerce &amp; Marketplaces</fullName>
            </value>
            <value>
                <fullName>Social Media Advertising</fullName>
            </value>
            <value>
                <fullName>D2C Brands</fullName>
            </value>
            <value>
                <fullName>Online Dating Platforms</fullName>
            </value>
            <value>
                <fullName>Online Real Estate</fullName>
            </value>
            <value>
                <fullName>OTA &amp; Metasearch</fullName>
            </value>
            <value>
                <fullName>Broadcasting</fullName>
            </value>
            <value>
                <fullName>Live Events</fullName>
            </value>
            <value>
                <fullName>Online Publishers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>