force-app/main/default/objects/Meeting__c/fields/Stock_Intel_Sector__c.field-meta.xml
<CustomField>
    <fullName>Stock_Intel_Sector__c</fullName>
    <description>MIS-655 Investors Meeting Section</description>
    <label>Stock Intel Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto &amp; Parts</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Online Retail</fullName>
            </value>
            <value>
                <fullName>Restaurants &amp; Delivery</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Specialized Consumer Services</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>