force-app/main/default/objects/Meeting__c/fields/Stocks__c.field-meta.xml
<CustomField>
    <fullName>Stocks__c</fullName>
    <description>MIS-655 Investors Meeting Section</description>
    <label>Stocks:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>