force-app/main/default/objects/Meeting__c/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <formula>BI_Data__r.Sub_Division_Meeting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROE Sub Division</label>
    <type>Text</type>
</CustomField>