force-app/main/default/objects/Meeting__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <inlineHelpText>What does success mean for this customer? What are their KPIs?</inlineHelpText>
    <label>Success Criteria</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>