force-app/main/default/objects/Meeting__c/fields/Summary_of_handover_call__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_handover_call__c</fullName>
    <label>Summary of handover call</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>