force-app/main/default/objects/Meeting__c/fields/Support_Agent_CP_Link_Sent__c.field-meta.xml
<CustomField>
    <fullName>Support_Agent_CP_Link_Sent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-6615</description>
    <label>Support Agent - CP Link Sent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supported_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>