force-app/main/default/objects/Meeting__c/fields/Support_Agent_CP_Link_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Agent_CP_Link_Sent_Date__c</fullName>
    <description>MIS-6615</description>
    <label>Support Agent - CP Link Sent - Date</label>
    <type>Date</type>
</CustomField>