force-app/main/default/objects/Meeting__c/fields/SW_Industry__c.field-meta.xml
<CustomField>
    <fullName>SW_Industry__c</fullName>
    <label>SW Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Tech / Ad Network</fullName>
                <label>AdTech and AdNetwork</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>CPG, Food &amp; Beverages</fullName>
                <label>CPG</label>
            </value>
            <value>
                <fullName>Gambling / Gaming</fullName>
                <label>Gambling and Gaming</label>
            </value>
            <value>
                <fullName>Pharma &amp; Healthcare</fullName>
                <label>Pharma and Healthcare</label>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
                <label>Publishers and Media</label>
            </value>
            <value>
                <fullName>Telecom &amp; Hardware</fullName>
                <label>Telecom</label>
            </value>
            <value>
                <fullName>Automotive &amp; Transportation</fullName>
                <label>Automotive</label>
            </value>
            <value>
                <fullName>Travel &amp; Hospitality</fullName>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Financial services</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Market Research</fullName>
                <label>Consulting and Market Research</label>
            </value>
            <value>
                <fullName>Retail / eCommerce</fullName>
                <label>Retail and eCommerce</label>
            </value>
            <value>
                <fullName>Government Public Sector &amp; Non Profit</fullName>
                <label>Public Sector, Non Profit, Fraud and Compliance</label>
            </value>
            <value>
                <fullName>VC and Private Equity</fullName>
                <label>Private Equity</label>
            </value>
            <value>
                <fullName>B2C Internet Services</fullName>
            </value>
            <value>
                <fullName>B2B Software</fullName>
            </value>
            <value>
                <fullName>Hedge Funds and Asset Management</fullName>
            </value>
            <value>
                <fullName>Investment Banking</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Equity Research</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Logistics and Shipping</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>