force-app/main/default/objects/Meeting__c/fields/Sys_RT_Name_for_conga__c.field-meta.xml
<CustomField>
    <fullName>Sys_RT_Name_for_conga__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Sys RT Name (for conga)</label>
    <type>Text</type>
</CustomField>