force-app/main/default/objects/Meeting__c/fields/SYSHasRelatedOpp__c.field-meta.xml
<CustomField>
    <fullName>SYSHasRelatedOpp__c</fullName>
    <formula>NOT(ISBLANK( Related_Opportunity__c ))</formula>
    <label>SYSHasRelatedOpp</label>
    <type>Checkbox</type>
</CustomField>