force-app/main/default/objects/Meeting__c/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <description>MIS-6753 - Estimated time frame for initiating a sales cycle</description>
    <label>Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>