force-app/main/default/objects/Meeting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Conference Meeting</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Company Event</fullName>
            </value>
            <value>
                <fullName>Chat Handover</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Review</fullName>
            </value>
            <value>
                <fullName>Partner Event</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Qualification / Discovery Call</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>