force-app/main/default/objects/Meeting__c/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Cancelled/Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AM canceled</fullName>
                <label>AM Cancelled</label>
            </value>
            <value>
                <fullName>Company not ENT</fullName>
            </value>
            <value>
                <fullName>Feature is in the current package</fullName>
            </value>
            <value>
                <fullName>Irrelevant Prospect</fullName>
            </value>
            <value>
                <fullName>No need we can deliver</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Prospect Cancelled</fullName>
            </value>
            <value>
                <fullName>Sales Cancelled</fullName>
            </value>
            <value>
                <fullName>Automate cancellation process</fullName>
            </value>
            <value>
                <fullName>NT Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>