force-app/main/default/objects/Meeting__c/fields/Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases__c</fullName>
    <inlineHelpText>Please describe the customer&apos;s main use cases for Similarweb.</inlineHelpText>
    <label>Other Use Cases</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>