force-app/main/default/objects/Meeting__c/fields/Usecase_s_Relevant_for_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Usecase_s_Relevant_for_Prospect__c</fullName>
    <label>Usecase/s Relevant for Prospect</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>