force-app/main/default/objects/Meeting__c/fields/Using_or_Evaluating_a_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Using_or_Evaluating_a_Competitor__c</fullName>
    <label>Using or Evaluating a Competitor?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>