force-app/main/default/objects/Meeting__c/fields/Way_forward__c.field-meta.xml
<CustomField>
    <fullName>Way_forward__c</fullName>
    <label>What are the next steps?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>