force-app/main/default/objects/Meeting__c/fields/What_are_the_Before_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_Before_Scenarios__c</fullName>
    <label>What are the Before Scenarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>