force-app/main/default/objects/Meeting__c/fields/What_are_the_Customer_s_Metrics__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_Customer_s_Metrics__c</fullName>
    <label>What are the Customer&apos;s Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>