force-app/main/default/objects/Meeting__c/fields/What_brought_them_to_us__c.field-meta.xml
<CustomField>
    <fullName>What_brought_them_to_us__c</fullName>
    <label>What brought them to us?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>