force-app/main/default/objects/Meeting__c/fields/What_does_the_company_do__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_company_do__c</fullName>
    <inlineHelpText>Please explain the company&apos;s revenue model. Examples: Fast Fashion Retail Seller - Ecommerce - selling womens clothing online to the US market</inlineHelpText>
    <label>What does the company do?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>