force-app/main/default/objects/Meeting__c/fields/What_is_Need_for_SimilarWeb__c.field-meta.xml
<CustomField>
    <fullName>What_is_Need_for_SimilarWeb__c</fullName>
    <label>What is Need for SimilarWeb?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>