force-app/main/default/objects/Meeting__c/fields/What_is_the_Budget_for_SimilarWeb__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Budget_for_SimilarWeb__c</fullName>
    <label>How do we know they can afford SW?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>