force-app/main/default/objects/Meeting__c/fields/What_is_the_Prospects_Role_Authority__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Prospects_Role_Authority__c</fullName>
    <label>Prospect&apos;s Role &amp; Responsibilities?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>