force-app/main/default/objects/Meeting__c/fields/What_is_their_main_pain__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_main_pain__c</fullName>
    <label>What are the Negative Consequences</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>