force-app/main/default/objects/Meeting__c/fields/What_other_similar_or_competitive_tools__c.field-meta.xml
<CustomField>
    <fullName>What_other_similar_or_competitive_tools__c</fullName>
    <inlineHelpText>Give detail on how they gather intelligence today and how they use this to inform their decision making 
Example: Prospect uses SEMRush to track competitor SEO stratgey</inlineHelpText>
    <label>What other similar or competitive tools</label>
    <length>255</length>
    <type>Text</type>
</CustomField>