force-app/main/default/objects/Meeting__c/fields/What_types_of_data_are_they_interested_i__c.field-meta.xml
<CustomField>
    <fullName>What_types_of_data_are_they_interested_i__c</fullName>
    <inlineHelpText>What channels do they focus on? Example: Interested in competitive keywords, focused on SEO channels</inlineHelpText>
    <label>Types of data they are interested in:</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>