force-app/main/default/objects/Meeting__c/fields/Which_package_is_the_ideal_fit_and_why__c.field-meta.xml
<CustomField>
    <fullName>Which_package_is_the_ideal_fit_and_why__c</fullName>
    <label>Which package is the ideal fit and why?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>