force-app/main/default/objects/Meeting__c/fields/Zendesk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Ticket_ID__c</fullName>
    <description>MIS-6615</description>
    <label>Zendesk Ticket ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>