force-app/main/default/objects/Meeting__c/recordTypes/AE.recordType-meta.xml
<RecordType>
    <fullName>AE</fullName>
    <active>true</active>
    <label>AE</label>
</RecordType>