force-app/main/default/objects/Meeting__c/recordTypes/Brazil_SDR.recordType-meta.xml
<RecordType>
    <fullName>Brazil_SDR</fullName>
    <active>false</active>
    <label>Brazil SDR</label>
</RecordType>