force-app/main/default/objects/Meeting__c/recordTypes/Calendar_Event.recordType-meta.xml
<RecordType>
    <fullName>Calendar_Event</fullName>
    <active>true</active>
    <label>Calendar Event</label>
</RecordType>