force-app/main/default/objects/Meeting__c/recordTypes/Chat.recordType-meta.xml
<RecordType>
    <fullName>Chat</fullName>
    <active>true</active>
    <description>SDR Chat</description>
    <label>Chat</label>
</RecordType>