force-app/main/default/objects/Meeting__c/recordTypes/Compete_Referral.recordType-meta.xml
<RecordType>
    <fullName>Compete_Referral</fullName>
    <active>true</active>
    <description>Compete Referral</description>
    <label>Compete Referral</label>
</RecordType>